# danmaku-game

./: .gitignore  CMakeLists.txt  README.md
docs/: README.md
include/: README.md
lib/: .#input_handler.cpp  README.md  graphics_renderer.cpp  graphics_renderer.h  input_handler.cpp  input_handler.h  player.cpp  player.h
resources/: README.md
src/: .#main.cpp  README.md  game.cpp  game.h  glad.c  main.cpp  player.cpp  player.h
tests/: README.md
